--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -8,16 +8,21 @@
     "48": "icon48.png",
     "128": "icon128.png"
   },
-  "background": {
-    "service_worker": "background.js"
-  },
   "permissions": [
-    "tabs"
+    "tabs",
+    "storage"
   ],
   "host_permissions": [
     "<all_urls>",
     "http://127.0.0.1:5000/*"
   ],
+  "action": {
+    "default_popup": "popup/popup.html"
+  },
+  "options_page": "security_center/pages/security_center.html",
+  "background": {
+    "service_worker": "background.js"
+  },
   "content_scripts": [
     {
       "matches": [
